<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Schedulegenix</string>
    <string name="title_activity_menu">MenuActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="ajouter_un_titre">Ajouter un titre :</string>
    <string name="choisir_une_mati_re">Choisir une matière :</string>
    <string name="mati_re">Matière</string>
    <string name="rappel">Rappel</string>
    <string name="examen_crit">Examen écrit</string>
    <string name="examen_oral">Examen oral</string>
    <string name="devoir">Devoir</string>
    <string name="ev_nement">Evénement</string>
    <string name="ajouter_une_photo">Ajouter une photo :</string>
    <string name="ajouter_une_note">Ajouter une note :</string>
    <string name="note">Note</string>
    <string name="frequence">Fréquence</string>
    <string name="menu_profil">Profil</string>
    <string name="heure">Heure</string>
    <string name="absence">Absence</string>
    <string name="retard">Retard</string>
    <string name="sortie_anticip_e">Sortie anticipée</string>
    <string name="justification">Justification</string>
    <string name="ajouter">ajouter</string>
    <string name="menu_suivant">Suivant</string>
    <string name="quit_fr">Voulez-vous fermer l\'application ?</string>
    <string name="oui">Oui</string>
    <string name="non">Non</string>
    <string name="valider">Valider</string>
    <string name="justifier">à justifier</string>
    <string name="retard_s">retard(s)</string>
    <string name="sortie_s_anticip_e_s">sortie(s) anticipée(s)</string>
    <string name="nombre_d_absences">Nombre d\'absences :</string>
    <string name="nombre_de_retards">Nombre de retards :</string>
    <string name="menu_calendrier">Calendrier</string>
    <string name="menu_parametres">Paramètres</string>
    <string-array name="types">
        <item>Travail personnel</item>
        <item>Entraînement en anglais</item>
        <item>Entraînement pour une présentation orale</item>
        <item>RESA</item>
        <item>TD</item>
        <item>TDm (TD machine)</item>
        <item>TP</item>
        <item>Travail de projet</item>
    </string-array>
    <string name="textview" />
    <string name="type_de_salle">Type de salle :</string>
    <string name="salle_s_disponible_s">Salle(s) disponible(s) :</string>
    <string name="todo0">TODO</string>
    <string name="menu_absences">Absences</string>
    <string name="menu_agenda">Agenda</string>
    <string name="menu_reveil">Réveil</string>
    <string name="menu_disponibilite">Disponibilité des salles </string>
    <string name="menu_autres">Autres fonctionnalités</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="choisir_une_date">Choisir une date</string>
    <string name="sauvegarde_et_restauration" tools:ignore="Typos">Sauvegarde et restauration</string>
    <string name="sauvegarder">Sauvegarder</string>
    <string name="restaurer">Restaurer</string>
    <string name="r_initialiser">Réinitialiser</string>
    <string name="e_mail">E-mail</string>
    <string name="pr_nom_s">Prénom(s)</string>
    <string name="rappel_de_justification">Rappel de justification</string>
    <string name="absence_s">absence(s)</string>
    <string name="justificatif_s">justificatif(s)</string>
    <string name="liste_des_profs">Liste des profs</string>
    <string name="groupes_et_unit_s">Groupes et unités</string>
    <string name="schedulegenix">Schedulegenix</string>
    <string name="version_1_0">version 1.0</string>
    <string name="autorisation_de_notifier">Autorisation de notifier</string>
    <string name="activer_les_notifications">Activer les notifications</string>
    <string name="notifier_s_il_n_ya_pas_d_evenements">Notifier s\'il n\'y a pas d\'evenements</string>
    <string name="fenetre_contextuelle">Fenetre contextuelle</string>
    <string name="son">Son</string>
    <string name="vibreur">Vibreur</string>
    <string name="badge_d_icone">Badge d\'icone</string>
    <string name="notifications_sur_ecran_de_verrouillage">Notifications sur l\'ecran de verrouillage</string>
    <string name="autorisation_de_notifier_lorsque_la_fonction_ne_pas_deranger_est_definie">Autorisation de notifier lorsque la fonction ne pas deranger est definie</string>
    <string name="titre">Titre</string>
    <string name="activer">Activer</string>
    <string name="r_p_ter">Répéter</string>
    <string name="l">L</string>
    <string name="j">J</string>
    <string name="v">V</string>
    <string name="s">S</string>
    <string name="d">D</string>
    <string name="hebdomadaire">Hebdomadaire</string>
    <string name="mensuel">Mensuel</string>
    <string name="chaque_ann_e">Chaque année</string>
    <string name="connexion">Connexion</string>
    <string name="tentative_s_restant">Tentative(s) restante(s) :</string>
    <string name="notifier_s_il_n_y_a_pas_d_v_nements">Notifier s\'il n\'y a pas d\'évènements</string>
    <string name="fen_tre_contextuelle_l_cran">Fenêtre contextuelle à l\'écran</string>
    <string name="badge_d_ic_ne_d_application">Badge d\'icône d\'application</string>
    <string name="notifications_sur_l_cran_de_verrouillage">Notifications sur l\'écran de verrouillage</string>
    <string name="autorisation_de_notifier_lorsque_la_fonction_ne_pas_d_ranger_est_d_finie">Autorisation de notifier lorsque la fonction Ne pas déranger est définie</string>
    <string name="semaine">Semaine</string>
    <string name="mes_unites">Mes unités</string>
    <string name="mes_groupes">Mes groupes</string>
    <string name="date_d_but">Date de début</string>
    <string name="date_fin">Date Fin</string>
    <string name="fr_quence">Fréquence</string>
    <string name="sauvegarde">Sauvegarde</string>
    <string name="notifications">Notifications</string>
    <string name="denis_desk">Denis Desk</string>
    <string name="_4153">4153</string>
    <string name="denis_desk_esiee_fr">denis.desk@esiee.fr</string>
    <string name="rechercher">Rechercher</string>
    <string name="suivant">suivant</string>
    <string name="jour">Jour</string>
    <string name="mois">Mois</string>
    <string name="temps">Temps</string>
    <string name="lundi">Lundi</string>
    <string name="mardi">Mardi</string>
    <string name="mercredi">Mercredi</string>
    <string name="jeudi">Jeudi</string>
    <string name="vendredi">Vendredi</string>
    <string name="samedi">Samedi</string>
    <string name="dimanche">Dimanche</string>
    <string name="_07h00">07h00</string>
    <string name="alarme">Alarme</string>
    <string name="lun">Lu</string>
    <string name="mar">Ma</string>
    <string name="mer">Me</string>
    <string name="jeu">Je</string>
    <string name="ven">Ve</string>
    <string name="sam">Sa</string>
    <string name="dim">Di</string>
    <string name="date">Date</string>
    <string name="todo">TODO</string>
    <string name="ajouter_un_rappel">AJOUTER UN RAPPEL</string>
    <string name="description">Description</string>
    <string name="nom">Nom</string>
    <string name="pr_nom">Prénom</string>
    <string name="pseudo">Nom d\'utilisateur</string>
    <string name="connexion2">Se connecter</string>
    <string name="adresse_mail">Adresse mail</string>
    <string name="mot_de_passe">Mot de passe</string>
    <string name="confirmez_votre_mot_de_passe">Confirmez votre mot de passe</string>
    <string name="genre">Genre :</string>
    <string name="homme">Homme</string>
    <string name="femme">Femme</string>
    <string name="s_inscrire">S\'inscrire</string>
    <string name="cycle">Cycle :</string>
    <string name="utiliser_l_appareil_photo">Utiliser l\'appareil photo</string>
    <string name="appareil_photo">Appareil photo</string>
    <string name="galerie">Galerie</string>
    <string name="veuillez_ins_rer_votre_adresse_mail">Veuillez insérer votre adresse mail.</string>
    <string name="nouveau_mot_de_passe">Nouveau mot de passe</string>
    <string name="veuillez_creer_new_mdp">Veuillez créer un nouveau mot de passe</string>
    <string name="confirmation_du_nouveau_mot_de_passe">Confirmer le mot de passe</string>
    <string name="confirmation">Confirmation</string>
    <string name="mot_de_passe_oubli">Mot de passe oublié ?</string>
    <string name="changeLang">Changer de langue</string>
    <string name="ma">Ma</string>
    <string name="me">Me</string>
    <string name="connexion_etablie">Connexion établie</string>
    <string name="terminer">Terminer</string>
    <string name="historique">Historique</string>
    <string name="inscription">Inscription</string>
    <string name="mettre_jour">Mettre à jour</string>
    <string name="ev_nement0">Evénement :</string>
    <string name="description0">Description :</string>
    <string name="date0">Date :</string>
    <string name="autres_fonctionnalit_s">Autres fonctionnalités</string>
    <string name="liste_des_professeurs">Liste des professeurs</string>
    <string name="gestion_des_absences">Gestion des absences</string>
    <string name="ring_ring">Ding Dong</string>
    <string name="dismiss">Rejeter</string>
    <string name="snooze">Répéter</string>
    <string name="schedule_alarm">Programmer une alarme</string>
    <string name="alarm_time">Heure de l\'alarme</string>
    <string name="alarm_title">Titre de l\'alarme</string>
    <string name="recurring_alarm">Alarme récurrente</string>
    <string name="my_alarms">Mes alarmes</string>
    <string name="my_alarm">Mon alarme</string>
    <string name="add_alarm">Ajouter une alarme</string>
    <string name="_00_00">00h00</string>
    <string name="espace">" "</string>
    <string name="_08h00">08h00</string>
    <string name="_09h00">09h00</string>
    <string name="_10h00">10h00</string>
    <string name="_11h00">11h00</string>
    <string name="_12h00">12h00</string>
    <string name="_13h00">13h00</string>
    <string name="_14h00">14h00</string>
    <string name="_15h00">15h00</string>
    <string name="_16h00">16h00</string>
    <string name="_17h00">17h00</string>
    <string name="_18h00">18h00</string>
    <string name="_19h00">19h00</string>
    <string name="_20h00">20h00</string>
    <string name="_21h00">21h00</string>
    <string name="_22h00">22h00</string>
    <string name="_23h00">23h00</string>
    <string name="unique">une fois</string>
    <string name="v0000">Heure :</string>
    <string name="justif00">Justification :</string>
    <string name="justif">justf</string>
    <string name="choisir_une_semaine">Choisir une semaine :</string>
    <string name="d_partement_du_professeur">Département du professeur :</string>
    <string name="la_liste_des_professeurs">La liste des professeurs :</string>
    <string name="charger_l_emploi_du_temps_actuel">Charger l\'emploi du temps actuel</string>
    <string name="premier_s_pr_nom_s">Premier(s) prénom(s)</string>
    <string name="nom_en_majuscule">Nom (en majuscule)</string>
    <string name="photo_obligatoire">Image obligatoire :</string>

</resources>