<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/item_navigation_alarme"
        android:enabled="true"
        android:icon="@android:drawable/ic_lock_idle_alarm"
        android:title="@string/menu_reveil" />

    <item
        android:id="@+id/item_navigation_agenda"
        android:enabled="true"
        android:icon="@android:drawable/ic_menu_agenda"
        android:title="@string/menu_agenda" />
    <item
        android:id="@+id/item_navigation_calendrier"
        android:enabled="true"
        android:icon="@android:drawable/ic_menu_my_calendar"
        android:title="@string/menu_calendrier" />

    <item
        android:id="@+id/item_navigation_disponibilite"
        android:enabled="true"
        android:icon="@android:drawable/ic_dialog_info"
        android:title="@string/menu_disponibilite" />

    <item
        android:id="@+id/item_navigation_autres"
        android:enabled="true"
        android:icon="@drawable/ic_more"
        android:title="@string/menu_autres" />

</menu>