<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="10dp">
    
    <ImageView
        android:id="@+id/imageViewRecord"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:background="@color/colorPrimaryDark"
        android:src="@drawable/ic_baseline_image_24"
        android:contentDescription="@string/todo" />

    <EditText
        android:id="@+id/TxtEv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/ev_nement"
        android:inputType="text" />

    <EditText
        android:id="@+id/TxtDes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/description"
        android:inputType="text" />
    <Button
        android:id="@+id/btnUpdate"
        android:text="@string/mettre_jour"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>



</LinearLayout>