<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/idtest"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="10"
    tools:context=".AjoutAgendaActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/colorPrimary"
            android:minHeight="?attr/actionBarSize"
            android:theme="?attr/actionBarTheme"
            app:title="@string/menu_agenda"
            app:titleTextColor="#FFFFFF" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/Textevenement"
                android:layout_width="match_parent"
                android:layout_height="71dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="15dp"
                android:layout_marginRight="20dp"
                android:autofillHints=""
                android:background="#FFFFFF"
                android:drawableStart="@android:drawable/ic_menu_edit"
                android:ems="10"
                android:hint="@string/ev_nement"
                android:inputType="textPersonName"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="#000000" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/imageButton3"
                    android:layout_width="77dp"
                    android:layout_height="wrap_content"
                    android:background="#FFFFFF"
                    android:contentDescription="@string/todo"
                    android:tint="#1F0000"
                    app:srcCompat="@android:drawable/ic_menu_my_calendar" />

                <TextView
                    android:id="@+id/TextDate"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="20dp"
                    android:layout_weight="1"
                    android:autofillHints=""
                    android:background="#FFFFFF"
                    android:clickable="false"
                    android:ems="10"
                    android:hint="@string/date" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="315dp"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <!-- ImageView on which the image will be set -->

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:foregroundGravity="center"
                android:gravity="center"
                android:text="@string/photo_obligatoire"
                android:textColor="#000000" />

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="20dp"
                android:layout_weight="9"
                android:contentDescription="@string/todo"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_baseline_image_24" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="20dp"
                android:gravity="bottom"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btnCamera"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="bottom"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginBottom="5dp"
                    android:layout_weight="1"
                    android:background="#FFFFFF"
                    android:text="@string/appareil_photo"
                    android:tint="#1f0000"
                    tools:ignore="ButtonStyle" />

                <!-- Button to choose an image from the gallery -->

                <Button
                    android:id="@+id/choose_image_btn"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="bottom"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginBottom="5dp"
                    android:layout_weight="1"
                    android:background="#FFFFFF"
                    android:text="@string/galerie"
                    android:tint="#1f0000"
                    tools:ignore="ButtonStyle" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="top"
            android:gravity="center|top"
            android:orientation="vertical">

            <EditText
                android:id="@+id/TextDescription"
                android:layout_width="match_parent"
                android:layout_height="54dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="20dp"
                android:autofillHints=""
                android:background="#FFFFFF"
                android:drawableStart="@android:drawable/ic_menu_sort_by_size"
                android:ems="10"
                android:hint="@string/description"
                android:inputType="textPersonName"
                android:textAllCaps="false" />

            <Button
                android:id="@+id/AjoutRappel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="20dp"
                android:background="#FFFFFF"
                android:text="@string/ajouter_un_rappel" />

        </LinearLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>